<resources>
    <string name="app_name">Postmates Clone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button_label">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button_label">Login</string>
    <string name="signup_label">Don\'t have an account? Sign up here!</string>
    <string name="generic_error_title">Oops!</string>
    <string name="login_error_message">Please enter a valid username and password.</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_completed_order">Completed Orders</string>
</resources>
